base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: deployment
 labels:
   deployment: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: demo
  template:
    metadata:
      labels:
        deployment: demo
    spec:
      containers:
      - name: container
        image: simplehttp:1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        # Health Check de vida
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        # Health Check de Prontidão
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
