base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  ports:
    - port: 8080
  selector:
    deployment: demo
  type: LoadBalancer
