base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: staging.desafio.candidato.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo
              port:
                number: 80
